wip: added basic/initial chat views
