# src/app/shared/components/chat/chat.viewmodel.ts
@@ -1,0 +1,9 @@
+import { MessageType } from '../../generated';
+
+export interface ChatMessage {
+  creationDate: Date;
+  id: string;
+  type: MessageType;
+  text: string;
+  userName: string;
+}
